set table width to 1200px

--- a/html-table-template.html
+++ b/html-table-template.html
@@ -10,6 +10,7 @@
             border-width:1px;
             border-color:#666666;
             border-collapse:collapse;
+            width: 1200px;
         }
         table.gridtable caption {
             font-family: Calibri, Arial;
